sample/ArrayTest/include/AT_decl_lib_interface_globals.hpp

DECL_TYPE_TAG(R_ArrayTest)

EXPORT SEXP AT_get_A1_D(SEXP args);
EXPORT SEXP AT_set_A1_D(SEXP args);
EXPORT SEXP AT_get_nt_A1_D(SEXP args);
EXPORT SEXP AT_set_nt_A1_D(SEXP args);
EXPORT SEXP AT_get_A1_I(SEXP args);
EXPORT SEXP AT_set_A1_I(SEXP args);
EXPORT SEXP AT_get_nt_A1_I(SEXP args);
EXPORT SEXP AT_set_nt_A1_I(SEXP args);
EXPORT SEXP AT_get_A2_B(SEXP args);
EXPORT SEXP AT_set_A2_B(SEXP args);
EXPORT SEXP AT_get_nt_A2_B(SEXP args);
EXPORT SEXP AT_set_nt_A2_B(SEXP args);
EXPORT SEXP AT_get_A2_C(SEXP args);
EXPORT SEXP AT_set_A2_C(SEXP args);
EXPORT SEXP AT_get_nt_A2_C(SEXP args);
EXPORT SEXP AT_set_nt_A2_C(SEXP args);
EXPORT SEXP AT_get_A2_DA(SEXP args);
EXPORT SEXP AT_set_A2_DA(SEXP args);
EXPORT SEXP AT_get_nt_A2_DA(SEXP args);
EXPORT SEXP AT_set_nt_A2_DA(SEXP args);
EXPORT SEXP AT_get_A2_IA(SEXP args);
EXPORT SEXP AT_set_A2_IA(SEXP args);
EXPORT SEXP AT_get_nt_A2_IA(SEXP args);
EXPORT SEXP AT_set_nt_A2_IA(SEXP args);
EXPORT SEXP AT_get_A2_IB(SEXP args);
EXPORT SEXP AT_set_A2_IB(SEXP args);
EXPORT SEXP AT_get_nt_A2_IB(SEXP args);
EXPORT SEXP AT_set_nt_A2_IB(SEXP args);
EXPORT SEXP AT_get_A2_LB(SEXP args);
EXPORT SEXP AT_set_A2_LB(SEXP args);
EXPORT SEXP AT_get_nt_A2_LB(SEXP args);
EXPORT SEXP AT_set_nt_A2_LB(SEXP args);
EXPORT SEXP AT_get_A2_UC(SEXP args);
EXPORT SEXP AT_set_A2_UC(SEXP args);
EXPORT SEXP AT_get_nt_A2_UC(SEXP args);
EXPORT SEXP AT_set_nt_A2_UC(SEXP args);
EXPORT SEXP AT_R_boundsCheckTest(SEXP args);
EXPORT SEXP AT_R_nt_boundsCheckTest(SEXP args);
EXPORT SEXP AT_R_IFTEST_BX(SEXP args);
EXPORT SEXP AT_R_nt_IFTEST_BX(SEXP args);
EXPORT SEXP AT_R_isNegative(SEXP args);
EXPORT SEXP AT_R_nt_isNegative(SEXP args);
EXPORT SEXP AT_R_isPositive(SEXP args);
EXPORT SEXP AT_R_nt_isPositive(SEXP args);
EXPORT SEXP AT_get_ix(SEXP args);
EXPORT SEXP AT_set_ix(SEXP args);
EXPORT SEXP AT_get_iy(SEXP args);
EXPORT SEXP AT_set_iy(SEXP args);
EXPORT SEXP AT_R_polySum3D(SEXP args);
EXPORT SEXP AT_R_nt_polySum3D(SEXP args);
EXPORT SEXP AT_R_POLYSUM3D_BX(SEXP args);
EXPORT SEXP AT_R_nt_POLYSUM3D_BX(SEXP args);
EXPORT SEXP AT_R_polySumA(SEXP args);
EXPORT SEXP AT_R_nt_polySumA(SEXP args);
EXPORT SEXP AT_R_POLYSUMA_BX(SEXP args);
EXPORT SEXP AT_R_nt_POLYSUMA_BX(SEXP args);
EXPORT SEXP AT_R_polySumB(SEXP args);
EXPORT SEXP AT_R_nt_polySumB(SEXP args);
EXPORT SEXP AT_R_POLYSUMB_BX(SEXP args);
EXPORT SEXP AT_R_nt_POLYSUMB_BX(SEXP args);
EXPORT SEXP AT_R_polySumC(SEXP args);
EXPORT SEXP AT_R_nt_polySumC(SEXP args);
EXPORT SEXP AT_R_POLYSUMC_BX(SEXP args);
EXPORT SEXP AT_R_nt_POLYSUMC_BX(SEXP args);
EXPORT SEXP AT_get_SingularBool(SEXP args);
EXPORT SEXP AT_set_SingularBool(SEXP args);
EXPORT SEXP AT_get_SingularLongbool(SEXP args);
EXPORT SEXP AT_set_SingularLongbool(SEXP args);
EXPORT SEXP AT_R_sum(SEXP args);
EXPORT SEXP AT_R_nt_sum(SEXP args);
EXPORT SEXP AT_R_SUM_BX(SEXP args);
EXPORT SEXP AT_R_nt_SUM_BX(SEXP args);
EXPORT SEXP AT_R_sumA1_D(SEXP args);
EXPORT SEXP AT_R_nt_sumA1_D(SEXP args);
EXPORT SEXP AT_R_test_one_if(SEXP args);
EXPORT SEXP AT_R_nt_test_one_if(SEXP args);
EXPORT SEXP AT_R_TEST_ONE_IF_BV(SEXP args);
EXPORT SEXP AT_R_nt_TEST_ONE_IF_BV(SEXP args);
EXPORT SEXP AT_R_TEST_ONE_IF_DV(SEXP args);
EXPORT SEXP AT_R_nt_TEST_ONE_IF_DV(SEXP args);
EXPORT SEXP AT_R_test_one_if_internal(SEXP args);
EXPORT SEXP AT_R_nt_test_one_if_internal(SEXP args);
EXPORT SEXP AT_R_TEST_ONE_IF_INTERNAL_BV(SEXP args);
EXPORT SEXP AT_R_nt_TEST_ONE_IF_INTERNAL_BV(SEXP args);
EXPORT SEXP AT_R_TEST_ONE_IF_INTERNAL_DV(SEXP args);
EXPORT SEXP AT_R_nt_TEST_ONE_IF_INTERNAL_DV(SEXP args);
EXPORT SEXP AT_get_female();
EXPORT SEXP AT_get_male();
EXPORT SEXP AT_get_n_sex();