sample/ArrayTest/AT_decl_lib_interface_globals.pas

function AT_get_A1_D(rInstance : SEXP; sArgList : SEXP) : SEXP;
function AT_set_A1_D(rInstance : SEXP; arg_A1_D : SEXP; sArgList : SEXP) : SEXP; cdecl;
function AT_get_nt_A1_D(rInstance : SEXP; sArgList : SEXP) : SEXP;
function AT_set_nt_A1_D(rInstance : SEXP; arg_A1_D : SEXP; sArgList : SEXP) : SEXP; cdecl;
function AT_get_A1_I(rInstance : SEXP; sArgList : SEXP) : SEXP;
function AT_set_A1_I(rInstance : SEXP; arg_A1_I : SEXP; sArgList : SEXP) : SEXP; cdecl;
function AT_get_nt_A1_I(rInstance : SEXP; sArgList : SEXP) : SEXP;
function AT_set_nt_A1_I(rInstance : SEXP; arg_A1_I : SEXP; sArgList : SEXP) : SEXP; cdecl;
function AT_get_A2_IA(rInstance : SEXP; sArgList : SEXP) : SEXP;
function AT_set_A2_IA(rInstance : SEXP; arg_A2_IA : SEXP; sArgList : SEXP) : SEXP; cdecl;
function AT_get_nt_A2_IA(rInstance : SEXP; sArgList : SEXP) : SEXP;
function AT_set_nt_A2_IA(rInstance : SEXP; arg_A2_IA : SEXP; sArgList : SEXP) : SEXP; cdecl;
function AT_get_A2_IB(rInstance : SEXP; sArgList : SEXP) : SEXP;
function AT_set_A2_IB(rInstance : SEXP; arg_A2_IB : SEXP; sArgList : SEXP) : SEXP; cdecl;
function AT_get_nt_A2_IB(rInstance : SEXP; sArgList : SEXP) : SEXP;
function AT_set_nt_A2_IB(rInstance : SEXP; arg_A2_IB : SEXP; sArgList : SEXP) : SEXP; cdecl;
function AT_R_boundsCheckTest(rInstance : SEXP; X : SEXP) : SEXP; cdecl;
function AT_R_nt_boundsCheckTest(rInstance : SEXP; X : SEXP) : SEXP; cdecl;
function AT_R_GLOBAL_SUM_BX(rInstance : SEXP; x : SEXP; xb1_x : SEXP; nbase : SEXP; ncount : SEXP; global_sumb1_x : SEXP) : SEXP; cdecl;
function AT_R_nt_GLOBAL_SUM_BX(rInstance : SEXP; x : SEXP; xb1_x : SEXP; nbase : SEXP; ncount : SEXP; global_sumb1_x : SEXP) : SEXP; cdecl;
function AT_R_IFTEST_BX(rInstance : SEXP; x : SEXP; xb5_x : SEXP; iftestb5_x : SEXP) : SEXP; cdecl;
function AT_R_nt_IFTEST_BX(rInstance : SEXP; x : SEXP; xb5_x : SEXP; iftestb5_x : SEXP) : SEXP; cdecl;
function AT_get_ix(rInstance : SEXP) : SEXP;
function AT_set_ix(rInstance : SEXP; arg_ix : SEXP) : SEXP; cdecl;
function AT_get_iy(rInstance : SEXP) : SEXP;
function AT_set_iy(rInstance : SEXP; arg_iy : SEXP) : SEXP; cdecl;
function AT_R_POLYB_BX(rInstance : SEXP; x : SEXP; xb3_x : SEXP; polybb3_x : SEXP) : SEXP; cdecl;
function AT_R_nt_POLYB_BX(rInstance : SEXP; x : SEXP; xb3_x : SEXP; polybb3_x : SEXP) : SEXP; cdecl;
function AT_R_POLYB_BX0(rInstance : SEXP; x : SEXP; xb5_x : SEXP; polybb5_x : SEXP) : SEXP; cdecl;
function AT_R_nt_POLYB_BX0(rInstance : SEXP; x : SEXP; xb5_x : SEXP; polybb5_x : SEXP) : SEXP; cdecl;
function AT_R_polySumA(rInstance : SEXP; X : SEXP) : SEXP; cdecl;
function AT_R_nt_polySumA(rInstance : SEXP; X : SEXP) : SEXP; cdecl;
function AT_R_POLYSUMA_BX(rInstance : SEXP; x : SEXP; xb2_x : SEXP; polysumab2_x : SEXP) : SEXP; cdecl;
function AT_R_nt_POLYSUMA_BX(rInstance : SEXP; x : SEXP; xb2_x : SEXP; polysumab2_x : SEXP) : SEXP; cdecl;
function AT_R_polySumB(rInstance : SEXP; X : SEXP) : SEXP; cdecl;
function AT_R_nt_polySumB(rInstance : SEXP; X : SEXP) : SEXP; cdecl;
function AT_R_POLYSUMB_BX(rInstance : SEXP; x : SEXP; xb3_x : SEXP; polysumbb3_x : SEXP) : SEXP; cdecl;
function AT_R_nt_POLYSUMB_BX(rInstance : SEXP; x : SEXP; xb3_x : SEXP; polysumbb3_x : SEXP) : SEXP; cdecl;
function AT_R_polySumC(rInstance : SEXP; X : SEXP) : SEXP; cdecl;
function AT_R_nt_polySumC(rInstance : SEXP; X : SEXP) : SEXP; cdecl;
function AT_R_POLYSUMC_BX(rInstance : SEXP; x : SEXP; xb4_x : SEXP; polysumcb4_x : SEXP) : SEXP; cdecl;
function AT_R_nt_POLYSUMC_BX(rInstance : SEXP; x : SEXP; xb4_x : SEXP; polysumcb4_x : SEXP) : SEXP; cdecl;
function AT_R_sum(rInstance : SEXP; X : SEXP) : SEXP; cdecl;
function AT_R_nt_sum(rInstance : SEXP; X : SEXP) : SEXP; cdecl;
function AT_R_SUM_BX(rInstance : SEXP; x : SEXP; xb1_x : SEXP; sumb1_x : SEXP) : SEXP; cdecl;
function AT_R_nt_SUM_BX(rInstance : SEXP; x : SEXP; xb1_x : SEXP; sumb1_x : SEXP) : SEXP; cdecl;
function AT_R_sumA1_D(rInstance : SEXP) : SEXP; cdecl;
function AT_R_nt_sumA1_D(rInstance : SEXP) : SEXP; cdecl;
function AT_R_test_one_if(rInstance : SEXP; v : SEXP) : SEXP; cdecl;
function AT_R_nt_test_one_if(rInstance : SEXP; v : SEXP) : SEXP; cdecl;
function AT_R_TEST_ONE_IF_BV(rInstance : SEXP; v : SEXP; vb7_v : SEXP; test_one_ifb7_v : SEXP) : SEXP; cdecl;
function AT_R_nt_TEST_ONE_IF_BV(rInstance : SEXP; v : SEXP; vb7_v : SEXP; test_one_ifb7_v : SEXP) : SEXP; cdecl;
function AT_R_TEST_ONE_IF_DV(rInstance : SEXP; v : SEXP; vd6_v : SEXP; test_one_if : SEXP) : SEXP; cdecl;
function AT_R_nt_TEST_ONE_IF_DV(rInstance : SEXP; v : SEXP; vd6_v : SEXP; test_one_if : SEXP) : SEXP; cdecl;
function AT_R_test_one_if_internal(rInstance : SEXP; v : SEXP) : SEXP; cdecl;
function AT_R_nt_test_one_if_internal(rInstance : SEXP; v : SEXP) : SEXP; cdecl;
function AT_R_TEST_ONE_IF_INTERNAL_BV(rInstance : SEXP; v : SEXP; vb9_v : SEXP; test_one_if_internalb9_v : SEXP) : SEXP; cdecl;
function AT_R_nt_TEST_ONE_IF_INTERNAL_BV(rInstance : SEXP; v : SEXP; vb9_v : SEXP; test_one_if_internalb9_v : SEXP) : SEXP; cdecl;
function AT_R_TEST_ONE_IF_INTERNAL_DV(rInstance : SEXP; v : SEXP; vd8_v : SEXP; test_one_if_internal : SEXP) : SEXP; cdecl;
function AT_R_nt_TEST_ONE_IF_INTERNAL_DV(rInstance : SEXP; v : SEXP; vd8_v : SEXP; test_one_if_internal : SEXP) : SEXP; cdecl;
